# rgx.legacy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  settings.json
benches/: benchmark.rs
examples/: button.rs  circles.rs  clock.rs  cursors.rs  game.rs  helloworld.rs  hover.rs  kit.rs  main.rs  offscreen.rs  picker.rs  post.rs  screenshot.rs  shapes.rs  shapes_simple.rs  sprite.rs  sprite_origin.rs  threaded.rs  transform.rs  transforms.rs
examples/data/: framebuffer.frag.spv  framebuffer.vert.spv  main.frag  main.vert  shader.frag  shader.vert  sprite.tga
src/: alloc.rs  application.rs  clock.rs  color.rs  error.rs  gfx.rs  lib.rs  math.rs  nonempty.rs  rect.rs  timer.rs  ui.rs
src/core/: mod.rs  transform.rs
src/gfx/: color.rs  pixels.rs  renderer.rs  shape2d.rs  sprite2d.rs
src/gfx/backends/: gl.rs
src/kit/: mod.rs  shape2d.rs  sprite2d.rs
src/kit/data/: post.frag  post.vert  shader.frag  shape.frag  shape.frag.spv  shape.vert  shape.vert.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv
src/kit/shape2d/: backend.rs  mod.rs
src/kit/shape2d/data/: shape.vert.spv
src/kit/sprite2d/: backend.rs  mod.rs
src/kit/sprite2d/data/: sprite.frag  sprite.frag.spv  sprite.vert
src/math/: algebra.rs  mod.rs  rect.rs  size.rs  traits.rs  transform.rs
src/nonempty/: mod.rs
src/platform/: dummy.rs  glfw.rs
src/ui/: canvas.rs  constraints.rs  cursor.rs  env.rs  event.rs  text.rs
src/ui/widgets/: align.rs  button.rs  controller.rs  hstack.rs  pod.rs  sized_box.rs  widget.rs  zstack.rs
