[package]
name = "rgx"
version = "0.2.0"
description = "Mid-level 2D graphics library built on wgpu"
repository = "https://github.com/cloudhead/rgx"
homepage = "https://github.com/cloudhead/rgx"
documentation = "https://docs.rs/rgx"
authors = ["Alexis Sellier <self@cloudhead.io>"]
license = "MIT"
edition = "2018"
keywords = ["graphics", "gamedev", "vulkan", "2d"]

[lib]
name = "rgx"

[features]
default = []

[dependencies]
wgpu = "0.4.0"
env_logger = "0.6.2"
cgmath = { version = "0.17.0", optional = true }
num-traits = "0.2.8"
raw-window-handle = "0.3"

[dev-dependencies]
winit = "0.20.0-alpha4"
image = "0.22.1"
criterion = "0.2.11"

[[bench]]
name = "benchmark"
harness = false
