[package]
name = "rgx"
version = "0.8.1"
description = "Mid-level 2D graphics abstraction with a wgpu backend"
repository = "https://github.com/cloudhead/rgx"
homepage = "https://github.com/cloudhead/rgx"
documentation = "https://docs.rs/rgx"
authors = ["Alexis Sellier <self@cloudhead.io>"]
license = "MIT"
edition = "2018"
keywords = ["graphics", "gamedev", "wgpu", "2d"]

[lib]
name = "rgx"

[features]
default = []
renderer = ["wgpu", "raw-window-handle"]

[dependencies]
wgpu = { version = "0.4.0", optional = true }
cgmath = { version = "0.17.0", optional = true }
num-traits = "0.2.8"
raw-window-handle = { version = "0.3", optional = true }

[dev-dependencies]
chrono = "0.4"
winit = "0.20.0"
image = "0.22.1"
criterion = "0.2.11"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "shapes"
required-features = ["renderer"]

[[example]]
name = "clock"
required-features = ["renderer"]

[[example]]
name = "threaded"
required-features = ["renderer"]

[[example]]
name = "helloworld"
required-features = ["renderer"]

[[example]]
name = "offscreen"
required-features = ["renderer"]

[[example]]
name = "screenshot"
required-features = ["renderer"]

[[example]]
name = "sprite"
required-features = ["renderer"]

[[example]]
name = "circles"
required-features = ["renderer"]
